--- a/openapi/paths/commissions@metrics.yaml
+++ b/openapi/paths/commissions@metrics.yaml
@@ -12,7 +12,7 @@ get:
   parameters:
     - name: conversion_id
       in: query
-      description: Only return charges from this conversion.
+      description: Only return commissions from this conversion.
       required: false
       schema:
         type: string
